# xml-fmt

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  pyproject.toml  tox.toml
.github/: FUNDING.yml  SECURITY.md
.github/workflows/: check.yaml  release.yaml
src/xml_fmt/: __init__.py  __main__.py
tests/: test_main.py
